--- a/README.me
+++ b/README.me
@@ -108,21 +108,21 @@ https://documenter.getpostman.com/view/4644051/TVeneoEQ
     - Delete Experience [DELETE]
       http://localhost/3000/experience/{id}
 
-6. Portfolio
-    - Add Portfolio [POST]
-      http://localhost/3000/portfolio
+6. Portofolio
+    - Add Portofolio [POST]
+      http://localhost/3000/portofolio
 
-    - List Portfolio [GET]
-      http://localhost/3000/portfolio
+    - List Portofolio [GET]
+      http://localhost/3000/portofolio
     
-    - Detail Portfolio [GET]
-      http://localhost/3000/portfolio/{id}
+    - Detail Portofolio [GET]
+      http://localhost/3000/portofolio/{id}
 
-    - Update Portfolio [PUT]
-      http://localhost/3000/portfolio/{id}
+    - Update Portofolio [PUT]
+      http://localhost/3000/portofolio/{id}
 
-    - Delete Portfolio [DELETE]
-      http://localhost/3000/portfolio/{id}
+    - Delete Portofolio [DELETE]
+      http://localhost/3000/portofolio/{id}
 
 7. Project
     - Add Project [POST]
